This CL fixes issue 8052 - Keyboard selection in Hebrew select element doesn't work

The fix consists of 2 parts:
The 1st part is in WebKit/WebCore/platform/chromium/PopupMenuChromimu.cpp. The patch is in https://bugs.webkit.org/show_bug.cgi?id=25899.

The 2nd part is in webkit/glue/webwidget_impl.cc:
Adding WebInputEvent::Char event type handling in WebWidgetImpl::HandleInputEvent(). The comment should be self-explained.

BUG=http://crbug.com/8052
TEST=In a HTML containing <select> tag and Hebrew character options, open the Hebrew select element, type a Hebrew letter which is the first letter of one option, that option should be selected.
Review URL: http://codereview.chromium.org/113712

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@16752 0039d316-1c4b-4281-b951-d872f2087c98